change: entity in the relation between group and profile